WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310074
[JSC] Fix quick DFG tier-up causing premature jettison on OSR entry failure
https://bugs.webkit.org/show_bug.cgi?id=310074
Summary
[JSC] Fix quick DFG tier-up causing premature jettison on OSR entry failure
Yijia Huang
Reported
2026-03-16 21:30:37 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-16 21:30:43 PDT
<
rdar://problem/172718078
>
Yijia Huang
Comment 2
2026-03-16 21:35:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60744
EWS
Comment 3
2026-03-17 17:05:34 PDT
Committed
309439@main
(90a5bb45b586): <
https://commits.webkit.org/309439@main
> Reviewed commits have been landed. Closing PR #60744 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug